--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
